--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
         architecture: 'x64'
     - name: Create Wheel
       run: |
-          pip install wheel
-          python setup.py sdist bdist_wheel
+          pip install build
+          python -m build
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
