--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ rpt_crop_bg = "rpt_dosi.bin.rpt_crop_bg:go"
 rpt_roi_crop = "rpt_dosi.bin.rpt_roi_crop:go"
 rpt_resample_image = "rpt_dosi.bin.rpt_resample_image:go"
 rpt_dose_hanscheid = "rpt_dosi.bin.rpt_dose_hanscheid:go"
+rpt_tmtv = "rpt_dosi.bin.rpt_tmtv:go"
 rpt_spect_calibration = "rpt_dosi.bin.rpt_spect_calibration:go"
 opendose_web_get_isotopes_list = "rpt_dosi.bin.opendose_web_get_isotopes_list:go"
 opendose_web_get_sources_list = "rpt_dosi.bin.opendose_web_get_sources_list:go"
