--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,14 @@ __pycache__
 
 log/*
 dicom/
-db_clb/
+db_clb/B*
+db_clb/C*
+db_clb/D*
+db_clb/F*
+db_clb/G*
+db_clb/L*
+db_clb/M*
+db_clb/P*
 spectrum_runtest/
 old_tests/
 
