--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
         "radioactivedecay",
         "questionary",
         "pandas",
+        "TotalSegmentator",
         "openpyxl",
 ]
 requires-python = ">=3.8"
