--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         name: dist
         path: dist/
 
-  test_install:
+  test_install_python_version:
     runs-on: ${{ matrix.os }}
     needs: [build_wheel]
     strategy:
@@ -81,3 +81,43 @@ jobs:
           else
               exit 0
           fi
+
+  test_install_os:
+    runs-on: ${{ matrix.os }}
+    needs: [build_wheel]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, macos-latest]
+        python-version: ["3.11"]
+
+    steps:
+    - name: Checkout github repo
+      uses: actions/checkout@v4
+      with:
+          lfs: True
+    - name: Ensure LFS files are pulled
+      run: git lfs pull
+    - name: Checkout submodules
+      run: git submodule update --init --recursive
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        architecture: 'x64'
+    - name: Run tests
+      shell: bash {0}
+      run: |
+          echo $pwd
+          pip install -v -e .
+          cd $RUNNER_TEMP
+          echo $pwd
+          OutputTest=$(rpt_tests)
+          echo "$OutputTest"
+          OutputTest=$(echo "$OutputTest" | tail -1)
+          if [[ "$OutputTest" != "True" ]]; then
+              exit -1
+          else
+              exit 0
+          fi
+
