--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ name = "rpt-dosi"
 dynamic = ["version", "readme"]
 authors = [{name = "David Sarrut", email = "david.sarrut@creatis.insa-lyon.fr"}]
 description = "RadioPharmaceutical Therapy Dosimetry"
-license = {file = "LICENSE"}
+license = {file = "LICENSE.md"}
 keywords = ["html"]
 classifiers = [
     "Programming Language :: Python",
