--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,9 @@ rpt_roi_crop = "rpt_dosi.bin.rpt_roi_crop:go"
 rpt_resample_ct = "rpt_dosi.bin.rpt_resample_ct:go"
 rpt_resample_spect = "rpt_dosi.bin.rpt_resample_spect:go"
 rpt_resample_roi = "rpt_dosi.bin.rpt_resample_roi:go"
+rpt_spect_update = "rpt_dosi.bin.rpt_spect_update:go"
 rpt_dose = "rpt_dosi.bin.rpt_dose:go"
 rpt_tmtv = "rpt_dosi.bin.rpt_tmtv:go"
-
-rpt_spect_calibration = "rpt_dosi.bin.rpt_spect_calibration:go"
-rpt_spect_Bq_to_SUV = "rpt_dosi.bin.rpt_spect_Bq_to_SUV:go"
 
 opendose_web_get_isotopes_list = "rpt_dosi.bin.opendose_web_get_isotopes_list:go"
 opendose_web_get_sources_list = "rpt_dosi.bin.opendose_web_get_sources_list:go"
