--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ rpt_resample_spect = "rpt_dosi.bin.rpt_resample_spect:go"
 rpt_resample_roi = "rpt_dosi.bin.rpt_resample_roi:go"
 rpt_spect_update = "rpt_dosi.bin.rpt_spect_update:go"
 rpt_dose = "rpt_dosi.bin.rpt_dose:go"
+rpt_dose_rate = "rpt_dosi.bin.rpt_dose_rate:go"
 rpt_tmtv = "rpt_dosi.bin.rpt_tmtv:go"
 
 opendose_web_get_isotopes_list = "rpt_dosi.bin.opendose_web_get_isotopes_list:go"
