update images metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,11 +52,13 @@ rpt_tests = "rpt_dosi.bin.rpt_tests:go"
 
 rpt_crop_bg = "rpt_dosi.bin.rpt_crop_bg:go"
 rpt_roi_crop = "rpt_dosi.bin.rpt_roi_crop:go"
+rpt_roi_stats = "rpt_dosi.bin.rpt_roi_stats:go"
 rpt_resample_ct = "rpt_dosi.bin.rpt_resample_ct:go"
 rpt_resample_spect = "rpt_dosi.bin.rpt_resample_spect:go"
 rpt_resample_roi = "rpt_dosi.bin.rpt_resample_roi:go"
 rpt_image_info = "rpt_dosi.bin.rpt_image_info:go"
-rpt_image_update = "rpt_dosi.bin.rpt_image_update:go"
+rpt_image_set_metadata = "rpt_dosi.bin.rpt_image_set_metadata:go"
+rpt_spect_update = "rpt_dosi.bin.rpt_spect_update:go"
 
 rpt_dose = "rpt_dosi.bin.rpt_dose:go"
 rpt_dose_rate = "rpt_dosi.bin.rpt_dose_rate:go"
