--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,8 +68,11 @@ opendose_web_get_isotopes_list = "rpt_dosi.bin.opendose_web_get_isotopes_list:go
 opendose_web_get_sources_list = "rpt_dosi.bin.opendose_web_get_sources_list:go"
 opendose_web_get_svalues = "rpt_dosi.bin.opendose_web_get_svalues:go"
 
-rpt_db_rois_activity = "rpt_dosi.bin.rpt_db_rois_activity:go"
+# new db scripts
 rpt_db_info = "rpt_dosi.bin.rpt_db_info:go"
+
+# old db scripts
+rpt_db_rois_activity = "rpt_dosi.bin.rpt_db_rois_activity:go"
 rpt_db_add_rois = "rpt_dosi.bin.rpt_db_add_rois:go"
 rpt_db_tac_plot = "rpt_dosi.bin.rpt_db_tac_plot:go"
 rpt_db_tac_triexpo = "rpt_dosi.bin.rpt_db_tac_triexpo:go"
